# MTG-TG-BOT

./: .gitignore  .replit  app.py  bot.py  firebase_init.py  key.json  pyproject.toml  requirements.txt
telebot/: credentials.py
