[tool.poetry]
name = "repl-nix-mtg-tg-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_mtg_tg_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
telegram = "^0.0.1"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
